--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "alert": "^5.0.10",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
@@ -16,7 +17,8 @@
     "express-generator": "^4.16.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "querystring": "^0.2.1"
   },
   "devDependencies": {},
   "description": "",
