--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "alert": "^5.0.10",
     "axios": "^0.21.1",
+    "basic-auth": "^2.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
@@ -17,10 +18,10 @@
     "express-generator": "^4.16.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
+    "mongodb": "^4.3.1",
     "mysql2": "^2.2.5",
     "querystring": "^0.2.1"
   },
-  "devDependencies": {},
   "description": "",
   "repository": {
     "type": "git",
