--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "basic-auth": "^2.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-generator": "^4.16.1",
@@ -20,6 +21,7 @@
     "http": "0.0.1-security",
     "mongodb": "^4.3.1",
     "mysql2": "^2.2.5",
+    "oracledb": "^6.8.0",
     "querystring": "^0.2.1"
   },
   "description": "",
