--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "mongodb": "^4.3.1",
     "mysql2": "^2.2.5",
     "oracledb": "^6.8.0",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.2"
   },
   "description": "",
   "repository": {
